style: fix cards spacing

--- a/br-webui/style.css
+++ b/br-webui/style.css
@@ -128,3 +128,7 @@ input:checked + .slidernew:before {
 .btn {
     font-size: smaller;
 }
+
+div.card {
+    margin-bottom: 30px;
+}
